1.7.1
-----
1. Remove kmix 'fix', and ue a proper fix! Dont access QWidgets' winId unless
   "w->testAttribute(Qt::WA_WState_Created) && w->internalWinId()" Thanks to
   Thomas Lübking
2. Set XProperties on show event.
3. Fix saving of 'thin' options.

1.7.0
-----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
 3. Use popup menu gradient's border setting to determine border type of menus.
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
 6. If not rounding, enable all 'square' options.
 7. Store background colour setting in XProperty - so that this can be used by
    QtCurve kwin decoration.
 8. Add position setting for background image; top left, top middle, top right,
    bottom left, bottom middle, bottom right, left middle, right middle, and centred.
 9. Use square tooltips by default. (Problems have been reported with Pidgin and
    rounded tooltip - but I cannot reproduce these!)
10. In preview window, draw background rings/image down from titlebar.
11. Add option to use KDE4 palette's hover colour for kwin button symbol
    mouse-over.
12. Fix slight drawing glitch when not using 'glow' for tab mouse-over.
13. RTL fixes/workarounds for table headers.
14. Workaround kcmshell terminating immediately after QtCurve config dialog is
    closed - increase KGlobal reference count.
15. When shading tab background, use fillRect() and not fillPath() - seems to
    workaround glithches with intel 2.12 graphics driver.
16. Fix kwin option to only apply opacity to titlebar.
17. Add option to control whether window titlebars are filled with the
    background *before* the titlebar gradient is applied.
18. Altered check/radio contents size - so as to better align cehckbox texts
    when used in left part of a form-layout.
19. Slightly better kwin button icon size calculation.